[tool.poetry]
name = "engawa"
version = "0.1.5"
description = ""
authors = ["sobamchan <oh.sore.sore.soutarou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.8"
sentencepiece = "^0.1.97"
tokenizers = "^0.13.2"
transformers = "^4.25.1"
pytorch-lightning = "^1.8.6"
nltk = "^3.8"
wandb = "^0.13.7"
datasets = "^2.8.0"
sienna = "^0.1.5"
click = "^8.1.3"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
neovim = "^0.3.1"
ipython = "^8.7.0"
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
engawa = "engawa.cli:app"
